# ctxcuts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
examples/basic/.ctxcuts/: shortcuts.yml
examples/basic/.ctxcuts/contexts/: audit.md  commit.md  docs.md  explain.md  fix.md  investigate.md  map.md  perf.md  quality.md  review.md  security.md  tests.md
src/ctxcuts/: __init__.py  cli.py  clipboard.py  config.py  defaults.py  doctor.py  expand.py  parser.py  templates.py  tokens.py
tests/: test_cli_copy.py  test_cli_doctor.py  test_cli_root.py  test_cli_show.py  test_doctor.py  test_expand.py  test_parser.py  test_templates.py  test_tokens.py
