[project]
name = "ctxcuts"
version = "0.4.0"
description = "Portable context shortcuts for AI agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ctxcuts contributors" }
]
keywords = ["ai", "agents", "context", "cli", "shortcuts", "prompt-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/pitill0/ctxcuts"
Repository = "https://github.com/pitill0/ctxcuts"
Issues = "https://github.com/pitill0/ctxcuts/issues"

[project.scripts]
ctxc = "ctxcuts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-PyYAML>=6.0.12.20250516",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
